# Wan2.1

./: .gitignore  Dockerfile  environment.yml  generate.py  latent_segmentor.py  main.py  physics_invariants.py  physics_optimizer.py  plots.ipynb  plots.py  requirements.txt  run.slurm  samwise_interface.py  utils.py  videojam_subjects.txt
SAMWISE/: README.md  engine.py  inference_davis.py  inference_demo.py  inference_mevis.py  inference_ytvos.py  main.py  main_pretrain.py  opts.py  requirements.txt  samwise_interface.py
SAMWISE/datasets/: __init__.py  coco_eval.py  davis.py  image_to_seq_augmenter.py  mevis.py  refexp.py  samplers.py  transform_utils.py  transforms_image.py  transforms_video.py  ytvos.py
SAMWISE/davis2017/: davis.py  evaluation.py  utils.py
SAMWISE/docs/: data.md  training-and-inference.md
SAMWISE/fairseq/: __init__.py  binarizer.py  checkpoint_utils.py  file_utils.py  hub_utils.py  iterative_refinement_generator.py  ngram_repeat_block.py  options.py  pdb.py  quantization_utils.py  registry.py  search.py  sequence_generator.py  sequence_scorer.py  speech_generator.py  trainer.py  utils.py
SAMWISE/fairseq/criterions/: ctc.py  (+24 more)
SAMWISE/models/: CMT_adapter.py  conditional_memory_encoder.py  layers.py  model_utils.py  path_utils.py  postprocessors.py  samwise.py  segmentation.py
SAMWISE/tools/: metrics.py
SAMWISE/util/: misc.py
samwise_tools/: __init__.py  pyproject.toml  samwise.py  samwise_interface.py
wan/: __init__.py  text2video.py  text2video_paired.py
wan/modules/: model.py  pair_model.py  t5.py
wan/utils/: fm_solvers_unipc.py
(+175 files in other folders)
