[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samwise"
version = "0.0.1"
description = "SAMWISE vendored inside Wan2.1"
requires-python = ">=3.9"

[tool.setuptools]
# We map the *root of the repo* to a single package name: "samwise"
packages = ["samwise"]
package-dir = { samwise = "." }
include-package-data = true

[tool.setuptools.exclude-package-data]
samwise = ["*.md", "docs/*", "assets/*", "demo_output/*", "frames_example_video/*", "datasets/*", "davis2017/*", "__pycache__/*"]